<resources>
    <string name="app_name">COMP 3717 Term Project</string>
    <string name="std_names">Created By Sirinam and Eric</string>
    <string name="stud_id_1">Eric Dong A001170099</string>
    <string name="stud_id_2">Sirinam Virdee A00992205</string>

    <string name="login_title">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Register</string>

    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="logout">Logout</string>

    <!--  registration strings  -->
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="username_hint">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_open_drawer">Open Navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="create_title">Create</string>
    <string name="groups_title">Groups</string>
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="sign_up">Sign Up</string>

    <string name="preferences_title">Preferences</string>
    <string name="vax_question">Are You Vaccinated?</string>
    <string name="sports_pref">Select Your Preferred Sport</string>

    <string name="sport_title">Sport</string>
    <string name="create_event_title">Create Event</string>
    <string name="location_text">Location</string>
    <string name="date_text">Date</string>
    <string name="size_text">Size</string>

    <string name="b_ball">Basketball</string>
    <string name="baseball_title">Baseball</string>
    <string name="football_title">Football</string>
    <string name="golf_title">Golf</string>
    <string name="hockey_title">Hockey</string>
    <string name="soccer_title">Soccer</string>
    <string name="volleyball_title">Volleyball</string>
    <string name="next">next</string>


    <string name="pref_title">Change Preference</string>
    <string name="save_btn_title">Save</string>
    <string name="groups">Groups</string>
    <string name="your_groups">Your Groups</string>
    <string name="group_title">Group Title</string>
    <string name="description">Description</string>

</resources>