<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment"
    >

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="603dp"
        android:text="@string/settings_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="554dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="449dp"
        android:text="@string/pref_title"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.526" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="124dp"
        android:layout_height="345dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioButtonBasketball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_ball" />

        <RadioButton
            android:id="@+id/radioButtonBaseball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseball_title" />

        <RadioButton
            android:id="@+id/radioButtonFootball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/football_title" />

        <RadioButton
            android:id="@+id/radioButtonGolf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/golf_title" />

        <RadioButton
            android:id="@+id/radioButtonHockey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hockey_title" />

        <RadioButton
            android:id="@+id/radioButtonSoccer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soccer_title" />

        <RadioButton
            android:id="@+id/radioButtonVolleyball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volleyball_title" />
    </RadioGroup>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="163dp"
        android:layout_height="68dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_btn_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>
