<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateFragment"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/create_event_title"
        android:textColor="@color/orange"
        android:textSize="25sp" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="@color/orange" />
    <EditText
        android:id="@+id/title_edit"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"

        android:hint="@string/group_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/about_edit"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"

        android:layout_gravity="center"

        android:hint="@string/description"
        android:inputType="text" />

    <EditText
        android:id="@+id/sport_edit"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"

        android:hint="@string/sport_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/location_edit"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_gravity="center"

        android:layout_marginBottom="20dp"
        android:hint="@string/location_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/game_size_edit"
        android:layout_width="301dp"
        android:layout_height="46dp"

        android:layout_gravity="center"
        android:hint="@string/size_text"
        android:inputType="number" />

    <Button
        android:id="@+id/create_group_btn"
        android:layout_width="163dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/create_event_title" />


</LinearLayout>