<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/tv_App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="34dp"
        android:text="@string/create_new_account"
        android:textColor="#6699ff"
        android:textSize="25sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:indeterminateTint="#4CAF50"
        android:max="100"
        android:visibility="gone"
        android:progress="1" />


    <EditText
        android:id="@+id/email_edit"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_gravity="center"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_reg_login"
        android:layout_gravity="center"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:backgroundTint="#6699ff" />

    <Button
        android:id="@+id/reg_login_btn"
        android:layout_gravity="center"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginBottom="13dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:backgroundTint="#6699ff" />


</LinearLayout>